added some solution to exercise 1

--- a/hwsp/10/sol/Blatt_10.tex
+++ b/hwsp/10/sol/Blatt_10.tex
@@ -24,15 +24,23 @@
 \begin{document}
 
 \paragraph{Aufgabe 1 \textnormal{(Black-Scholes-Modell; 4 Punkte)}.}
-Zeigen Sie, dass das Semimartingal
+Zeigen Sie, dass das Se\-mi\-mar\-tin\-gal
 \[X_t=X_0e^{\sigma W_t+t(\mu-\sigma^2/2)}\]
 für $\mu\in\mathbb{R}$, $\sigma\in\mathbb{R}_+$ und einer Standard Brown'schen Bewegung $W$ folgende Darstellung besitzt
 \[dX_t=\mu X_tdt+\sigma X_tdW_t=X_td(\mu t+\sigma W_t)\,.\]
 
-Da $W_t$ stetig ist, gilt $W_-=W$ und $\langle W^c,W^c\rangle=\langle W\rangle$.
-\emph{Es sollte noch gezeigt werden, warum $\langle W\rangle=t$.}
-Nach den Definitionen von Blatt 9 besitzt $X_t$ die gegebene Darstellung, wenn $X_t=X_0+\int_0^t\mu X_sds+\int_0^t\sigma X_sdW_s$.
-Anwenden der Itô-Formel liefert
+Wir wenden die Itô-Formel auf $f(Y_t)=e^{Y_t}$ mit $Y_t=\sigma W_t+t(\mu-\sigma^2/2)$ an
+Da $Y_t$ stetig ist, gilt $Y_-=Y$ und $\langle Y^c,Y^c\rangle=\langle Y\rangle$.
+Mit $f'(Y_t)=f''(Y_t)=e^{Y_t}$ erhalten wir
+\begin{align*}
+  X_t
+  &=X_0+\int_0^t X_sdY_s+\frac{1}{2}\int_0^tX_td\langle Y\rangle_s\,.
+    \intertext{Durch Nachdifferenzieren, sowie $d\langle Y\rangle_s=\sigma^2ds$, \emph{was noch gezeigt werden sollte}, erhalten wir}
+  &=X_0+\int_0^tX_s\sigma dW_s+\int_0^s\Bigl(\mu-\frac{\sigma^2}{2}\Bigr)ds+\frac{1}{2}\int_0^tX_s\sigma^2ds\\
+  &=X_0+\int_0^tX_s\sigma dW_s+\int_0^s X_s\mu ds\,.
+\end{align*}
+Nach Definition 1 von Blatt 9 mit $H_t=\mu X_t$ und $K_t=\sigma X_t$ besitzt $X_t$ dann die angegebene Darstellung.
+
 %https://en.wikipedia.org/wiki/It%C3%B4%27s_lemma
 
 \end{document}
