--- a/hwsp/10/sol/Blatt_10.tex
+++ b/hwsp/10/sol/Blatt_10.tex
@@ -30,18 +30,19 @@ für $\mu\in\mathbb{R}$, $\sigma\in\mathbb{R}_+$ und einer Standard Brown'schen 
 \[dX_t=\mu X_tdt+\sigma X_tdW_t=X_td(\mu t+\sigma W_t)\,.\]
 
 Wir wenden die Itô-Formel auf $f(Y_t)=e^{Y_t}$ mit $Y_t=\sigma W_t+t(\mu-\sigma^2/2)$ an
-Da $Y_t$ stetig ist, gilt $Y_-=Y$ und $\langle Y^c,Y^c\rangle=\langle Y\rangle$.
-Mit $f'(Y_t)=f''(Y_t)=e^{Y_t}$ erhalten wir
+Da $Y_t$ stetig ist, gilt $Y_-=Y$ und $\langle Y^c,Y^c\rangle=\langle Y\rangle=\sigma^2t$.
+% Außerdem ist $\operatorname{Var}(Y_t)=\sigma^2\operatorname{Var}(W_t)=\sigma^2t$.
+Zunächst ist nämlich $\sigma^2t$ stetig, verschwindet für $t=0$ und ist wachsend, also ist $\sigma^2t\in\mathscr{V}$.
+\emph{Es müsste noch gezeigt werden, dass $Y_t^2-\sigma^2t$ ein Martingal ist.}
+Mit $f'(Y_t)=f''(Y_t)=e^{Y_t}=X_t$ erhalten wir
 \begin{align*}
   X_t
-  &=X_0+\int_0^t X_sdY_s+\frac{1}{2}\int_0^tX_td\langle Y\rangle_s\,.
-    \intertext{Durch Nachdifferenzieren, sowie $d\langle Y\rangle_s=\sigma^2ds$, \emph{was noch gezeigt werden sollte}, erhalten wir}
+  &=X_0+\int_0^t X_sdY_s+\frac{1}{2}\int_0^tX_sd\langle Y\rangle_s\,.
+    \intertext{Durch Nachdifferenzieren, sowie $d\langle Y\rangle_s=\sigma^2ds$, erhalten wir}
   &=X_0+\int_0^tX_s\sigma dW_s+\int_0^s\Bigl(\mu-\frac{\sigma^2}{2}\Bigr)ds+\frac{1}{2}\int_0^tX_s\sigma^2ds\\
   &=X_0+\int_0^tX_s\sigma dW_s+\int_0^s X_s\mu ds\,.
 \end{align*}
 Nach Definition 1 von Blatt 9 mit $H_t=\mu X_t$ und $K_t=\sigma X_t$ besitzt $X_t$ dann die angegebene Darstellung.
-
-%https://en.wikipedia.org/wiki/It%C3%B4%27s_lemma
 
 \end{document}
 
