improved solution of exercise 4

--- a/hwsp/10/sol/Blatt_10.tex
+++ b/hwsp/10/sol/Blatt_10.tex
@@ -86,7 +86,11 @@ Formulieren Sie die ökonomische Interpretation dieser Aussage.
 
 \noindent\emph{Hinweis: Verwenden Sie Aufgabe 5.}
 
-Entsprechend Proposition 5.1.7 in \cite{Delbaen2006} ist dies eine direkte Konsequenz von Aufgabe 5, denn für $Q\sim P$ und eine nichtnegative Funktion $f\geq0$, die nicht fast sicher verschwindet, haben wir $E_Q[f]>0$.
+Entsprechend Proposition 5.1.7 in \cite{Delbaen2006} ist dies eine direkte Konsequenz von Aufgabe 5.
+Sei in der Tat $S$ ein lokal beschränktes Martingal, sodass $(H\cdot S)_\infty\in (H\cdot S)_\infty\in K^\text{simple}\cap L_+^\infty(\Omega,\mathscr{A},P)$.
+Nach Aufgabe 5 gilt dann $E_Q[(H\cdot S)_\infty]=0$.
+Da $(H\cdot S)_\infty\in L_+^\infty(\Omega,\mathscr{A},P)$ gilt außerdem $(H\cdot S)_\infty\geq0$.
+Somit muss schon $(H\cdot S)_\infty=0$ gelten.
 Das ist eine Richtung des Fundamental Theorem of Asset Pricing -- Existiert ein äquivalentes Martingalmaß $Q$, so ist der Markt frei von Arbitrage.
 
 \paragraph{Aufgabe 5 \textnormal{(Bonus 4 Punkte)}.}
