added some more calculation to exercise 1

--- a/books/wt.bib
+++ b/books/wt.bib
@@ -1,17 +1,9 @@
-@Inbook{Delbaen2006,
+@book{Delbaen2006,
 chapter=5,
-author="Delbaen, Freddy
-and Schachermayer, Walter",
-title="The Kreps-Yan Theorem",
-bookTitle="The Mathematics of Arbitrage",
+author="Delbaen, Freddy and Schachermayer, Walter",
+title="The Mathematics of Arbitrage",
 year=2006,
 publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
-pages="71--83",
-abstract="Let us turn back to the no-arbitrage theory developed in Chap. 2 to raise again the question: what can we deduce from applying the no-arbitrage principle with respect to pricing and hedging of derivative securities?",
-isbn="978-3-540-31299-4",
-doi="10.1007/978-3-540-31299-4_5",
-url="https://doi.org/10.1007/978-3-540-31299-4_5"
 }
 @misc{proofwiki1,
   title = {Uniformly Continuous Function to Complete Metric Space has Unique Continuous Extension to Closure of Domain},
