small addtion to 11.3.iii

--- a/hwsp/11/sol/Blatt_11.tex
+++ b/hwsp/11/sol/Blatt_11.tex
@@ -69,6 +69,7 @@ Durch Einsetzen erhalten wir $x+20\xi_1=20$ und $x-20\xi_1=0$.
 Durch addieren der beiden Gleichungen erhalten wir $2x=20$, sodass $x=10$ und durch abziehen der zweiten Gleichung von der ersten $40\xi_1=20$, sodass $\xi_1=\frac{1}{2}$.
 Schließlich berechnen wir durch Einsetzen $E_Q[H]=0{,}5\cdot20+0{,}5\cdot0=10$.
 Damit ist $Q$ ein risikoneutrales Maß für die Kaufoption mit Ausübungspreis $K=100$, falls der anfängliche Preis $x=10$ ist.
+In der Tat ist $E_Q[H]=10$ dann ein arbitragefreier Preis für $H$.
 \bibliography{../../../books/wt}
 \end{document}
 
