--- a/books/wt.bib
+++ b/books/wt.bib
@@ -1,3 +1,11 @@
+@book{foellmer2016,
+   title =     {Stochastic Finance: An Introduction in Discrete Time},
+   author =    {Hans Föllmer, Alexander Schied},
+   publisher = {de Gruyter},
+   isbn =      {311046344X; 9783110463446},
+   year =      {2016},
+   series =    {de Gruyter Textbook},
+   edition =   {4th REV. ed.}}
 @book{Delbaen2006,
 chapter=5,
 author="Delbaen, Freddy and Schachermayer, Walter",
