--- a/hwsp/12/sol/Blatt_12.tex
+++ b/hwsp/12/sol/Blatt_12.tex
@@ -59,12 +59,31 @@ Das Ziel dieser Aufgabe ist es zu beweisen, dass das CRR-Modell arbitragefrei is
   \]
 \end{itemize}
 
-\noindent\emph{Lösung: }$Q$ ist genau dann ein Martingalmaß, wenn $(\widetilde{S}_n/\widetilde{S}_n^0)$ ein $Q$-Martingal ist, also genau dann, wenn $E_Q[\widetilde{S}_{i+1}/\widetilde{S}^0_{i+1}|{\cal F}_i]=\widetilde{S}_i/\widetilde{S}^0_i$ oder mit der Definition von $\widetilde{S}^0_n$ genau dann, wenn $E_Q[\widetilde{S}_{i+1}|{\cal F}_i]=(1+r)\widetilde{S}_i$.
+\noindent\emph{Lösung: }
+Wir folgen dem Beweis von Theorem 5.39 aus \cite{foellmer2016}.
+$Q$ ist genau dann ein Martingalmaß, wenn $(\widetilde{S}_n/\widetilde{S}_n^0)$ ein $Q$-Martingal ist, also genau dann, wenn $E_Q[\widetilde{S}_{i+1}/\widetilde{S}^0_{i+1}|{\cal F}_i]=\widetilde{S}_i/\widetilde{S}^0_i$ oder mit der Definition von $\widetilde{S}^0_n$ genau dann, wenn $E_Q[\widetilde{S}_{i+1}|{\cal F}_i]=(1+r)\widetilde{S}_i$.
 Da $-1<a<b$ gilt $\widetilde{S}_i>0$ und wir können dadurch teilen, sodass wir erhalten, dass $E_Q[\widetilde{S}_{i+1}|{\cal F}_i]/\widetilde{S}_i=1+r$.
 Außerdem ist $\widetilde{S}_n$ nach Definition von ${\cal F}$ ${\cal F}_n$-messbar.
 Als Verkettung von messbaren Funktionen ist auch $1/\widetilde{S}_n$ ${\cal F}_n$-messbar.
 Mit den Rechenregeln für die bedingte Erwartung können wir $1/\widetilde{S}_n$ ${\cal F}_n$ in die bedingte Erwartung reinziehen.
 Mit der Definition der Renditen $T_i$ erhalten wir $E_Q[T_{i+1}|{\cal F}_i]=1+r$ und somit die zu zeigende Aussage.
+%\begin{itemize}
+%\item [2.] Angenommen, es existiert ein äquivalentes Martingalmaß $Q\sim P$.
+%  Zeigen Sie, dass $r\in(a,b)$ ist.
+%\end{itemize}
+\begin{itemize}
+\item [3.] Angenommen, $Q\sim P$ ist ein äquivalentes Martingalmaß.
+  Zeigen Sie, dass die Renditen $(T_i)_{i=1,\dots,N}$ unabhängig und identisch verteilt sind mit
+  \[Q(T_1=1+a)=1-q\quad\text{und}\quad Q(T_1=1+b)=q\,,\]
+  wobei $q\in(0,1)$ gegeben ist durch
+  \[
+    q=\frac{r-a}{b-a}\,.
+  \]
+\end{itemize}
+Aus Teilaufgabe 1 wissen wir, dass $E_Q[T_{i+1}|{\cal F}_i]=1+r$, wobei $T_{i+1}\in\{1+a,1+b\}$, also $(1+a)(1-E_Q[\mathbbm{1}_{\{T_{i+1}=1+b\}}|{\cal F}_i])+(1+b)E_Q[\mathbbm{1}_{\{T_{i+1}=1+b\}}|{\cal F}_i]=1+r$.
+Durch Einsetzen von $q=E_Q[\mathbbm{1}_{\{T_{i+1}=1+b\}}|{\cal F}_i]$ und auflösen nach $q$ ergibt sich $E_Q[\mathbbm{1}_{\{T_{i+1}=1+b\}}|{\cal F}_i]=q=\frac{r-a}{b-a}$.
+Das heißt, allerdings, die $T_i$ sind unabhängig und identisch verteilt, \emph{was noch genauer gezeigt werden sollte}.
+Für $i=0$ erhalten wir außerdem $q=Q(T_1=1+b)$.
 \bibliography{../../../books/wt}
 \end{document}
 
